--- a/SOFP.csproj
+++ b/SOFP.csproj
@@ -11,6 +11,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Update="LoginUsers.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Update="Products.cs">
       <SubType>Form</SubType>
     </Compile>
