--- a/SOFP.csproj
+++ b/SOFP.csproj
@@ -4,6 +4,8 @@
     <OutputType>WinExe</OutputType>
     <TargetFramework>net5.0-windows</TargetFramework>
     <UseWindowsForms>true</UseWindowsForms>
+    <Description>SOFP - Sale of finished products 
+(Реализация готовой продукции)</Description>
   </PropertyGroup>
 
   <ItemGroup>
@@ -12,6 +14,9 @@
 
   <ItemGroup>
     <Compile Update="LoginUsers.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Update="Customers.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Update="Products.cs">
