--- a/SOFP.csproj
+++ b/SOFP.csproj
@@ -13,6 +13,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Update="Discounts.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Update="LoginUsers.cs">
       <SubType>Form</SubType>
     </Compile>
